# sciurus17_ros

./: .ci.rosinstall  .travis.yml  CONTRIBUTING.md  README.en.md  README.ja.md  README.md
.github/workflows/: industrial_ci.yml
sciurus17/: CMakeLists.txt  package.xml
sciurus17_bringup/: CMakeLists.txt  package.xml
sciurus17_bringup/launch/: sciurus17_bringup.launch  sciurus17_bringup_with_vehicle.launch
sciurus17_bringup/scripts/: gripper_test.py
sciurus17_control/: CMakeLists.txt  README.en.md  README.md  package.xml  sciurus17_hardware.xml
sciurus17_control/config/: manipulator_config.yaml  sciurus17_control1.yaml  sciurus17_control2.yaml  sciurus17_control3.yaml  sciurus17_controllers.yaml  sciurus17_fake_control1.yaml  sciurus17_fake_control2.yaml  sciurus17_fake_control3.yaml  sciurus17_gazebo_control.yaml
sciurus17_control/include/sciurus17_control/: device_mutex.h  dxlport_control.h  joint_control.h  sciurus17_hardware.hpp  visibility_control.h
sciurus17_control/launch/: controller1.launch  controller2.launch  controller3.launch  sciurus17_control.launch  sciurus17_control.launch.py  sciurus17_fake_control.launch
sciurus17_control/scripts/: mimic_controller.py  preset_reconfigure.py
sciurus17_control/src/: control_setting.cpp  dxlport_control.cpp  hardware.cpp  joint_control.cpp  sciurus17_hardware.cpp
sciurus17_description/: CMakeLists.txt  package.xml
sciurus17_description/launch/: display.launch
sciurus17_description/meshes/collision/: Base.stl  L_HandA.stl  L_HandB.stl  R_HandA.stl  R_HandB.stl  R_Link7.stl
sciurus17_description/urdf/: sciurus17.urdf  sciurus17.urdf.xacro  sciurus17_body.xacro  sciurus17_gazebo.xacro  sciurus17_gazebo1.urdf  sciurus17_gazebo2.urdf  sciurus17_gazebo3.urdf  sciurus17_head.xacro  sciurus17_left_arm.xacro  sciurus17_left_hand.xacro  sciurus17_right_arm.xacro  sciurus17_right_hand.xacro  sciurus17_with_vehicle.urdf
sciurus17_examples/: CMakeLists.txt  README.en.md  README.ja.md  README.md  package.xml
sciurus17_examples/include/: pose_presets.hpp
sciurus17_examples/include/composition/: color_detection.hpp  neck_jt_control.hpp  object_tracker.hpp
sciurus17_examples/include/sciurus17_examples/: color_detection.hpp  neck_jt_control.hpp  object_tracker.hpp  waist_jt_control.hpp
sciurus17_examples/launch/: aruco_marker_detection_example.launch  box_stacking_example.launch  chest_camera_tracking.launch.py  composition.launch.py  debug_with_ar_marker_example.launch  demo.launch.py  example.launch.py  head_camera_tracking.launch.py  object_tracking.launch.py  preset_pid_gain_example.launch  visual_feedback_example.launch
sciurus17_examples/scripts/: box_stacking_example.py  chest_camera_example.py  chest_camera_tracking.py  control_effort_wrist.py  debug_right_arm_tip_position_with_armarker.py  depth_camera_example.py  depth_camera_tracking.py  detect_aruco_marker.py  gripper_action_example.py  hand_position_publisher_example.py  head_camera_example.py  head_camera_tracking.py  neck_joint_trajectory_example.py  pick_and_place_left_arm_demo.py  pick_and_place_right_arm_demo.py  pick_and_place_two_arm_demo.py  preset_pid_gain_example.py  visual_feedback_demo.py  waist_joint_trajectory_example.py
sciurus17_examples/src/: color_detection.cpp  gripper_control.cpp  head_camera_tracking.cpp  neck_control.cpp  neck_jt_control.cpp  object_detection.cpp  object_tracker.cpp  pick_and_place_left_arm.cpp  pick_and_place_right_arm_waist.cpp  pick_and_place_two_arm.cpp  pose_presets.cpp  waist_control.cpp  waist_jt_control.cpp
sciurus17_gazebo/: CMakeLists.txt  package.xml
sciurus17_gazebo/config/: bridge.yaml
sciurus17_gazebo/gui/: gui.config
sciurus17_gazebo/launch/: sciurus17_with_table.launch  sciurus17_with_table.launch.py  sciurus17_with_vehicle.launch
sciurus17_gazebo/models/sciurus17/: model.config  sciurus17.sdf
sciurus17_gazebo/scripts/: initpose_sciurus17.py
sciurus17_gazebo/worlds/: table.sdf  table.world  vehicle.world
sciurus17_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sciurus17_moveit_config/config/: fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  sciurus17.srdf  sciurus17_controllers.yaml
sciurus17_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  detect_aruco_marker.rviz  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch.py  moveit.rviz  moveit_rviz.launch  moveit_rviz.launch.py  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context_with_vehicle.launch  planning_pipeline.launch.xml  ros_controllers.launch  rsp.launch.py  run_benchmark_ompl.launch  run_move_group.launch.py  sciurus17_moveit_controller_manager.launch.xml  sciurus17_planning.launch  sciurus17_planning_with_vehicle.launch  sensor_manager.launch.xml  setup_assistant.launch  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  trajectory_execution.launch.xml  warehouse.launch
sciurus17_msgs/: CMakeLists.txt  package.xml
sciurus17_msgs/cfg/: ServoParameter.cfg
sciurus17_tools/: CMakeLists.txt  package.xml
sciurus17_tools/rules/: 91-sciurus17.rules
sciurus17_tools/scripts/: create_udev_rules  get_chest_camera_product_id  get_chest_camera_vendor_id
sciurus17_tools/src/: realsense_hwreset.cpp
sciurus17_vision/: CMakeLists.txt  package.xml
sciurus17_vision/config/: camera_info.yaml  chest_camera_info.yaml
sciurus17_vision/launch/: chest_camera.launch  chest_camera.launch.py  head_camera.launch.py  realsense.launch
