<?xml version="1.0"?>
<package>
  <name>sciurus17_examples</name>
  <version>0.0.0</version>
  <description>examples of Sciurus17 ROS package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sciurus17_moveit_config</build_depend>
  <run_depend>sciurus17_moveit_config</run_depend>
  <run_depend>moveit_commander</run_depend>

  <export>

  </export>
</package>
