<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sciurus17_examples</name>
  <version>3.0.0</version>
  <description>examples of Sciurus17 ROS package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>

  <license>Apache License 2.0</license>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
  <author email="kuwagata@rt-net.jp">Atsushi Kuwagata</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>sciurus17_control</depend>
  <depend>sciurus17_description</depend>
  <depend>sciurus17_moveit_config</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>libopencv-dev</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>realsense2_camera</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
