<?xml version="1.0"?>
<package>
  <name>sciurus17_gazebo</name>
  <version>0.0.0</version>
  <description>The sciurus17_gazebo package</description>

  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>roboticsgroup_gazebo_plugins</run_depend>

  <run_depend>sciurus17_moveit_config</run_depend>
  <run_depend>sciurus17_control</run_depend>
  <run_depend>sciurus17_description</run_depend>
</package>
